<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.MainActivity" >
    
    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	    <ImageView
	        android:id="@+id/imgThumb1"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:adjustViewBounds="true"
	        android:scaleType="center"
	        android:src="@drawable/background" />
	    
	    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"  >
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical" >
	
	            <FrameLayout
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content" >
	
	                <ImageView
	                    android:id="@+id/header"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:src="@drawable/headerbackground" />
	
	                <FrameLayout
	                    android:id="@+id/frameList"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="left|center"
	                    android:layout_marginLeft="@dimen/margin_5dp"
	                    android:background="@drawable/button_header" >
	
	                    <ImageView
	                        android:id="@+id/imgHeaderList"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_gravity="center"
	                        android:src="@drawable/headericonlist" />
	                </FrameLayout>
	
	                <FrameLayout
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="top|center"
	                    android:layout_margin="10dp" >
	
	                    <ImageView
	                        android:id="@+id/imgLogo"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_gravity="center"
	                        android:src="@drawable/headerlogo" />
	                </FrameLayout>
	
	                <FrameLayout
	                    android:id="@+id/frameSearch"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="right|center"
	                    android:layout_marginRight="@dimen/margin_5dp"
	                    android:background="@drawable/button_header" >
	
	                    <ImageView
	                        android:id="@+id/imgHeaderSearch"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_gravity="center"
	                        android:src="@drawable/headericonsearch" />
	                </FrameLayout>
	            </FrameLayout>
	
	        </LinearLayout>
	
	    <FrameLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent" >
	
	        <FrameLayout
	            android:id="@+id/asas"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_marginBottom="@dimen/margin_45dp"
	            android:layout_weight="1" >
	
	        </FrameLayout>
	
	        <FrameLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="bottom|center" >
	
	            <ImageView
	                android:id="@+id/imageView4"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:src="@drawable/footerbackground" />
	
	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:layout_gravity="bottom|center" >
	
	                <FrameLayout
	                    android:id="@+id/frameFooter"
	                    android:layout_width="0dp"
	                    android:layout_height="match_parent"
	                    android:layout_weight="1" >
	
	                    <LinearLayout
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_gravity="bottom|center"
	                        android:layout_marginBottom="@dimen/margin_bottom_5dp"
	                        android:orientation="vertical" >
	
	                        <ImageView
	                            android:id="@+id/imgFooterTab"
	                            android:layout_width="wrap_content"
	                            android:layout_height="wrap_content"
	                            android:layout_gravity="center"
	                            android:src="@drawable/footericonapartment" />
	
	                        <TextView
	                            android:id="@+id/tvLabel5"
	                            android:layout_width="wrap_content"
	                            android:layout_height="wrap_content"
	                            android:layout_gravity="center"
	                            android:text="@string/string_home"
	                            android:textAppearance="?android:attr/textAppearanceSmall"
	                            android:textColor="#FFFFFF"
	                            android:textSize="10sp" />
	                    </LinearLayout>
	                </FrameLayout>
	
	                <FrameLayout
	                    android:id="@+id/frameMyCity"
	                    android:layout_width="0dp"
	                    android:layout_height="match_parent"
	                    android:layout_weight="1" >
	
	                    <LinearLayout
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_gravity="bottom|center"
	                        android:layout_marginBottom="@dimen/margin_bottom_5dp"
	                        android:orientation="vertical" >
	
	                        <ImageView
	                            android:id="@+id/imgMyCity"
	                            android:layout_width="wrap_content"
	                            android:layout_height="wrap_content"
	                            android:layout_gravity="center"
	                            android:src="@drawable/footericonmycity" />
	
	                        <TextView
	                            android:id="@+id/tvLabel6"
	                            android:layout_width="wrap_content"
	                            android:layout_height="wrap_content"
	                            android:layout_gravity="center"
	                            android:text="@string/string_mycity"
	                            android:textAppearance="?android:attr/textAppearanceSmall"
	                            android:textColor="#FFFFFF"
	                            android:textSize="10sp" />
	                    </LinearLayout>
	                </FrameLayout>
	
	                <FrameLayout
	                    android:id="@+id/frameFeatured"
	                    android:layout_width="0dp"
	                    android:layout_height="match_parent"
	                    android:layout_weight="1" >
	
	                    <LinearLayout
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_gravity="bottom|center"
	                        android:layout_marginBottom="@dimen/margin_bottom_5dp"
	                        android:orientation="vertical" >
	
	                        <ImageView
	                            android:id="@+id/imgFeatured"
	                            android:layout_width="wrap_content"
	                            android:layout_height="wrap_content"
	                            android:layout_gravity="center"
	                            android:src="@drawable/footericonfeatured" />
	
	                        <TextView
	                            android:id="@+id/tvLabel1"
	                            android:layout_width="wrap_content"
	                            android:layout_height="wrap_content"
	                            android:layout_gravity="center"
	                            android:text="@string/string_featured"
	                            android:textAppearance="?android:attr/textAppearanceSmall"
	                            android:textColor="#FFFFFF"
	                            android:textSize="10sp" />
	                    </LinearLayout>
	                </FrameLayout>
	
	                <FrameLayout
	                    android:id="@+id/frameMaps"
	                    android:layout_width="0dp"
	                    android:layout_height="match_parent"
	                    android:layout_weight="1" >
	
	                    <LinearLayout
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_gravity="bottom|center"
	                        android:layout_marginBottom="@dimen/margin_bottom_5dp"
	                        android:orientation="vertical" >
	
	                        <ImageView
	                            android:id="@+id/imgMaps"
	                            android:layout_width="wrap_content"
	                            android:layout_height="wrap_content"
	                            android:layout_gravity="center"
	                            android:src="@drawable/footericonmap" />
	
	                        <TextView
	                            android:id="@+id/tvLabel7"
	                            android:layout_width="wrap_content"
	                            android:layout_height="wrap_content"
	                            android:layout_gravity="center"
	                            android:text="@string/string_maps"
	                            android:textAppearance="?android:attr/textAppearanceSmall"
	                            android:textColor="#FFFFFF"
	                            android:textSize="10sp" />
	                    </LinearLayout>
	                </FrameLayout>
	
	                <FrameLayout
	                    android:id="@+id/frameProfile"
	                    android:layout_width="0dp"
	                    android:layout_height="match_parent"
	                    android:layout_weight="1" >
	
	                    <LinearLayout
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:layout_gravity="bottom|center"
	                        android:layout_marginBottom="@dimen/margin_bottom_5dp"
	                        android:orientation="vertical" >
	
	                        <ImageView
	                            android:id="@+id/imgProfile"
	                            android:layout_width="wrap_content"
	                            android:layout_height="wrap_content"
	                            android:layout_gravity="center"
	                            android:src="@drawable/footericonprofile" />
	
	                        <TextView
	                            android:id="@+id/tvTitle"
	                            android:layout_width="wrap_content"
	                            android:layout_height="wrap_content"
	                            android:layout_gravity="center"
	                            android:text="@string/string_profile"
	                            android:textAppearance="?android:attr/textAppearanceSmall"
	                            android:textColor="#FFFFFF"
	                            android:textSize="10sp" />
	                    </LinearLayout>
	                </FrameLayout>
	            </LinearLayout>
	        </FrameLayout>
	
	    </FrameLayout>
	
	</LinearLayout>
	
	</FrameLayout>
</LinearLayout>    



